# windows-telemetry-guard

./: .gitignore  LICENSE  README.md  TelemetryGuard.ps1
.github/workflows/: release.yml
gui/: Cargo.toml  README.md
gui/src/: icon.rs  main.rs  script.rs
lib/: Backup.ps1  Catalog.ps1  Hosts.ps1  Operations.ps1
